samples/_failures_safe/1761280082_8cf0b4_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_c8ed14d7.c: In function ‘main’:
./samples/SAFE/__tmp_c8ed14d7.c:154: error: expected ‘(’ at end of input
./samples/SAFE/__tmp_c8ed14d7.c:153:9: error: expected declaration or statement at end of input
  153 |         for
      |         ^~~
./samples/SAFE/__tmp_c8ed14d7.c:153:9: error: expected declaration or statement at end of input
